# telegram_bot

./: .gitignore  CLAUDE.md  DEVLOG.md  README.md  claude_message.py  main.py  poll_for_requests.py  pyproject.toml  read_and_recommend_papers.py  send_notification.py  test.py
agents/: __init__.py  agent.py  config.py  utils.py
claude/: claude_bot.py  client.py  database.py
content_screening/: OPENALEX_SOURCE_PLAN.md  __init__.py  alembic.ini  arxiv_feed.py  constants.py  database.py  db_engine.py  embeddings.py  models.py  openalex.py  orm_models.py  rss_feed.py  scanner.py  screener.py  screening_bot.py
diary/: diary_bot.py  storage.py
dnd/: TODO.md  adventure_parser.py  agent.py  ai_player.py  alembic.ini  campaign_loader.py  campaign_tools.py  character_templates.py  database.py  db_engine.py  dice.py  dm_agent.py  dnd_bot.py  game_logic.py  game_manager.py  inventory_tools.py  memory_tools.py  models.py  narrator.py  orm_models.py  pdf_parser.py  rules_lawyer.py  run_test_game.py  setting_parser.py  spell_checker.py  srd_lookup.py  summarizer.py  tools.py  turn_policy.py  turn_timer.py  zone_tools.py
gcp_util/: secrets.py
llm/: llm_util.py  query.py
memes/: daily_hn_meme.py  generator.py  renderer.py  tools.py
minecraft/: healthcheck.py  react_to_logs.py
photos/: email_sender.py  photos_bot.py
scripts/: import_campaign.py
swedish/: alembic.ini  database.py  db_engine.py  flash_card.py  fsrs.py  orm_models.py  swedish_bot.py
tapestry/: backfill.py  bootstrap.py  daily.py  generator.py  models.py  news.py  setup_bucket.py  storage.py  style.py  svg.py
telegram_bot/: handle_request.py  messaging.py  telegram_bot.py
(+95 files in other folders)
