[project]
name = "telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-secret-manager>=2.23.3",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "jinja2>=3.1.0",
]
