[project]
name = "telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-secret-manager>=2.23.3",
    "python-telegram-bot[job-queue]>=21.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "alembic>=1.13.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "jinja2>=3.1.0",
    "langgraph>=0.4.0",
    "ipython>=9.9.0",
    "feedparser>=6.0.12",
    "html2text>=2025.4.15",
    "pyyaml>=6.0.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
]
